# baseddsl

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN-archive.md  PLAN.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml
ci/: smoke-image.sh  wait-for-db.sh
crates/based-ast/: Cargo.toml
crates/based-ast/src/: lib.rs
crates/based-cli/: Cargo.toml
crates/based-cli/src/: error.rs  main.rs  render.rs
crates/based-cli/tests/: migrate_gen.rs
crates/based-codegen/: Cargo.toml
crates/based-codegen/migrate/: commerce.snap
crates/based-codegen/src/: client.rs  lib.rs  migrate.rs  openapi.rs  sql.rs
crates/based-codegen/src/migrate/: diff.rs  lifecycle.rs  model.rs  sql.rs  tests.rs  up_mig.rs
crates/based-codegen/src/sql/: dml.rs  mutations.rs
crates/based-codegen/tests/: client.rs  ddl.rs  dml.rs  migrate.rs  mutations.rs  openapi.rs
crates/based-diagnostics/: Cargo.toml
crates/based-diagnostics/src/: lib.rs
crates/based-facts/: Cargo.toml
crates/based-facts/src/: lib.rs
crates/based-facts/tests/: facts.rs
crates/based-fmt/: Cargo.toml
crates/based-fmt/src/: lib.rs
crates/based-fmt/tests/: format.rs
crates/based-lsp/: Cargo.toml
crates/based-lsp/src/: compile.rs  main.rs
crates/based-manifest/: Cargo.toml
crates/based-manifest/src/: lib.rs
crates/based-parser/: Cargo.toml
crates/based-parser/src/: lexer.rs  lib.rs  parser.rs
crates/based-parser/tests/: conformance.rs  parse.rs
crates/based-runtime/: Cargo.toml
crates/based-runtime/src/: cursor.rs  driver.rs  embed.rs  guard.rs  http.rs  id.rs  idempotency.rs  lib.rs  load.rs  migrate.rs  plan.rs  postgres.rs  run.rs  scan.rs  serve.rs  shard.rs  sqlite.rs  value.rs
crates/based-runtime/tests/: cancel_safety.rs  embed.rs  http.rs  load.rs  mariadb_integration.rs  migrate_apply.rs  migrate_apply_mariadb.rs  mutation.rs  postgres_integration.rs  query.rs  serve.rs  sqlite_integration.rs  sqlx_spike.rs  streaming.rs  streaming_client.rs
crates/based-runtime/tests/support/: docker_mariadb.rs  docker_postgres.rs  embedded_client.rs  embedded_client_schema.bsl
crates/based-sema/: Cargo.toml
crates/based-sema/src/: check.rs  ctx.rs  enums.rs  indexes.rs  ir.rs  lib.rs  model.rs  resolve.rs  scope.rs
crates/based-sema/tests/: check.rs  conformance.rs  fk.rs
docker/: Dockerfile  README.md  entrypoint.sh  healthcheck.sh
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: bsl.tmLanguage.json  mig.tmLanguage.json  snap.tmLanguage.json
examples/axum-helpdesk/: .env  Cargo.toml  README.md  based.toml
examples/axum-helpdesk/migrations/0001_init/: schema.snap  up.mig
examples/axum-helpdesk/migrations/0002_rename_title_to_subject/: schema.snap  up.mig
examples/axum-helpdesk/migrations/0003_index_requirements/: schema.snap  up.mig
examples/axum-helpdesk/schema/comment/: model.bsl  queries.bsl
examples/axum-helpdesk/schema/draft/: model.bsl  queries.bsl
examples/axum-helpdesk/schema/org/: model.bsl  queries.bsl
examples/axum-helpdesk/schema/session/: model.bsl  queries.bsl
examples/axum-helpdesk/schema/ticket/: model.bsl  queries.bsl
examples/axum-helpdesk/schema/time_entry/: model.bsl  queries.bsl
examples/axum-helpdesk/schema/user/: model.bsl  queries.bsl
examples/axum-helpdesk/src/: app.rs  auth.rs  client.rs  lib.rs  main.rs  routes.rs
examples/mariadb-quickstart/: .env  Cargo.toml  README.md  based.toml  build.rs
examples/mariadb-quickstart/migrations/0001_init/: schema.snap  up.mig
examples/mariadb-quickstart/schema/: based.toml  order.bsl  org.bsl  queries.bsl  user.bsl
examples/mariadb-quickstart/src/: client.rs  main.rs
examples/postgres-quickstart/: .env  Cargo.toml  README.md  based.toml  build.rs
examples/postgres-quickstart/migrations/0001_init/: schema.snap  up.mig
examples/postgres-quickstart/schema/: based.toml  order.bsl  org.bsl  queries.bsl  user.bsl
examples/postgres-quickstart/src/: client.rs  main.rs
examples/sqlite-quickstart/: .env  .gitignore  Cargo.toml  README.md  based.toml  build.rs
examples/sqlite-quickstart/migrations/0001_init/: schema.snap  up.mig
examples/sqlite-quickstart/schema/: based.toml  user.bsl
examples/sqlite-quickstart/src/: client.rs  main.rs
spec/: decisions.md  grammar.ebnf  principles.md
spec/examples/commerce/: README.md  based.toml
spec/syntax/: auth.md  calling.md  enums.md  indexing.md  migrations.md  models.md  mutations.md  pagination.md  queries.md  raw.md  relations.md  shapes.md  soft-delete.md  sorting.md  streaming.md
tests/conformance-sema/ack_delete/: expected  input.bsl
tests/conformance-sema/ack_errors/: expected  input.bsl
tests/conformance-sema/aggregate/: expected  input.bsl
tests/conformance-sema/atomic_update/: expected  input.bsl
tests/conformance-sema/clean_relations/: expected  input.bsl
tests/conformance-sema/ctx_scope/: expected  input.bsl
tests/conformance-sema/errors_bundle/: expected  input.bsl
tests/conformance-sema/fk_referential/: expected  input.bsl
tests/conformance-sema/in_list/: expected  input.bsl
tests/conformance-sema/inferred_index/: expected  input.bsl
tests/conformance-sema/keyless/: expected  input.bsl
tests/conformance-sema/lints/: expected  input.bsl
tests/conformance-sema/m2m_flatten/: expected  input.bsl
tests/conformance-sema/raw_opaque/: expected  input.bsl
tests/conformance-sema/raw_query/: expected  input.bsl
tests/conformance-sema/shape_ref/: expected  input.bsl
tests/conformance-sema/stream_errors/: expected  input.bsl
tests/conformance-sema/stream_query/: expected  input.bsl
tests/conformance-sema/tx_bindings/: expected  input.bsl
tests/conformance-sema/unindexed_join/: expected  input.bsl
tests/conformance-sema/upsert/: expected  input.bsl
tests/conformance/ack_mutation/: expected  input.bsl
tests/conformance/ack_ret_no_brackets/: expected  input.bsl
tests/conformance/commerce_order/: expected  input.bsl
(+20 files in other folders)
