[workspace]
resolver = "2"
members = [
    "crates/based-ast",
    "crates/based-diagnostics",
    "crates/based-manifest",
    "crates/based-parser",
    "crates/based-sema",
    "crates/based-codegen",
    "crates/based-facts",
    "crates/based-runtime",
    "crates/based-lsp",
    "crates/based-cli",
]
# `examples/**` are standalone crates a user copies to start. They
# depend on the workspace crates *by path* but are deliberately kept out of the
# workspace so `cargo test --workspace` never builds them (they carry their own deps,
# e.g. bundled SQLite, and run as end-to-end smoke binaries, not unit tests).
exclude = ["examples"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# internal
based-ast = { path = "crates/based-ast" }
based-diagnostics = { path = "crates/based-diagnostics" }
based-manifest = { path = "crates/based-manifest" }
based-parser = { path = "crates/based-parser" }
based-sema = { path = "crates/based-sema" }
based-codegen = { path = "crates/based-codegen" }
based-facts = { path = "crates/based-facts" }
# external
logos = "0.14"
ariadne = "0.5"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
# Cross-platform SIGINT/SIGTERM handling for `based serve`'s graceful shutdown. A small,
# hardened crate (principle 7 — don't hand-roll signal handling); the signal concern
# lives in the CLI/process layer, so the runtime library stays signal-free.
ctrlc = { version = "3", features = ["termination"] }

[profile.release]
lto = "thin"
