[package]
name = "based-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "based"
path = "src/main.rs"

[dependencies]
based-ast = { workspace = true }
based-diagnostics = { workspace = true }
based-manifest = { workspace = true }
based-parser = { workspace = true }
based-sema = { workspace = true }
based-codegen = { workspace = true }
based-facts = { workspace = true }
# The runtime, with the HTTP listener + concrete MariaDB driver, so `based serve` can
# stand the schema up as a live RPC service. (The `serve` feature pulls the driver +
# HTTP server in; the front-end commands — check/gen/facts — don't touch them.)
based-runtime = { path = "../based-runtime", features = ["serve"] }
clap = { workspace = true }
anyhow = { workspace = true }
# Graceful shutdown of `based serve`: catch SIGTERM/SIGINT and drain (principle 7 —
# reuse a hardened signal crate rather than hand-roll platform signal handling).
ctrlc = { workspace = true }
