[package]
name = "based-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "based"
path = "src/main.rs"

[dependencies]
based-ast = { workspace = true }
based-diagnostics = { workspace = true }
based-manifest = { workspace = true }
based-parser = { workspace = true }
based-fmt = { workspace = true }
based-sema = { workspace = true }
based-codegen = { workspace = true }
based-facts = { workspace = true }
# The runtime, with the HTTP listener + all three concrete drivers, so `based serve` can
# stand the schema up as a live RPC service and `based migrate apply` can apply migrations
# against whichever dialect the manifest targets (MariaDB/SQLite/Postgres). (`serve` pulls the
# MariaDB driver + HTTP server; the front-end commands — check/gen/facts/migrate gen|render —
# don't touch any of them.)
based-runtime = { path = "../based-runtime", features = ["serve", "sqlite", "postgres"] }
clap = { workspace = true }
# Graceful shutdown of `based serve`: catch SIGTERM/SIGINT and drain (principle 7 —
# reuse a hardened signal crate rather than hand-roll platform signal handling).
ctrlc = { workspace = true }
