[package]
name = "based-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
based-ast = { workspace = true }
based-diagnostics = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
