[package]
name = "based-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# The concrete MariaDB driver + connection pool. Off by default so the core
# runtime (planning + dispatch) stays dependency-light and the seam tests need no
# database; `based serve` turns it on.
mariadb = ["dep:mysql"]
# The HTTP listener (`based serve`) — the socket edge over `serve::dispatch`. Pulls
# in a hardened sync HTTP server + a production uuid id-gen, and requires the concrete
# driver it routes to. Off by default so the core stays a plain library.
serve = ["mariadb", "dep:tiny_http", "dep:uuid"]
# The SQLite driver + backend (`SqliteDb` / `SqliteBackend`). Bundled SQLite (no system
# dependency), so it needs no live infra — the infra-free `Db`/`Backend` impl that backs
# real in-memory end-to-end integration tests (D27). Off by default; the core stays lean.
sqlite = ["dep:rusqlite"]

[dependencies]
based-ast.workspace = true
based-diagnostics.workspace = true
based-manifest.workspace = true
based-parser.workspace = true
based-sema.workspace = true
based-codegen.workspace = true
serde_json.workspace = true
# The MariaDB/MySQL driver (pure Rust) + its built-in connection pool — a hardened
# external component (principle 7), not a hand-rolled driver. TLS/compression off to
# avoid a system OpenSSL dependency; a deployment that needs TLS re-enables it.
mysql = { version = "26", optional = true, default-features = false, features = [
    "minimal",
] }
# The HTTP listener: a small, hardened, blocking HTTP/1 server (principle 7 — reuse,
# not a hand-rolled socket loop). We drive it with our own bounded worker-thread pool.
tiny_http = { version = "0.12", optional = true }
# Production id generation (D1): unpredictable, globally unique v4 uuids.
uuid = { version = "1", optional = true, features = ["v4"] }
# The SQLite driver: bundled SQLite compiled from source (no system dependency), a
# hardened external engine (principle 7). Infra-free, so it backs in-memory integration
# tests against a real `Db`/`Backend` rather than a `MockDb` (D27).
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }

[dev-dependencies]
based-parser.workspace = true
# The embed example (`tests/embed.rs`) hosts a committed generated client, which
# derives serde — the same dependency any consumer of `based gen client` pulls in.
serde.workspace = true
