[package]
name = "based-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# The concrete MariaDB driver + shard router, over sqlx's MySql driver. Off by default
# so the core runtime (planning + dispatch) stays dependency-light and the seam tests
# need no database.
mariadb = ["dep:sqlx", "sqlx/mysql", "sqlx/chrono", "sqlx/bigdecimal", "dep:chrono"]
# The concrete Postgres driver + shard router, over sqlx's Postgres driver. Postgres
# transmits every parameter binary-typed, so this driver parses the typed text-riding
# `SqlValue` variants into native uuid/chrono/json/decimal binds.
postgres = [
    "dep:sqlx",
    "sqlx/postgres",
    "sqlx/chrono",
    "sqlx/bigdecimal",
    "sqlx/uuid",
    "sqlx/json",
    "dep:chrono",
]
# The SQLite driver + backend over sqlx's async SQLite driver (bundled engine, no
# system dependency, no live server) — the infra-free `Db`/`Backend` behind real
# end-to-end integration tests.
sqlite = ["dep:sqlx", "sqlx/sqlite"]
# The HTTP listener (`based serve`) — the axum socket edge over `serve::dispatch` —
# plus the production uuid id-gen. Off by default so the core stays a plain library.
serve = ["dep:axum", "dep:uuid", "tokio/net"]
# The Docker-backed real-DB integration harness + live suites. Brings up ephemeral
# MariaDB/Postgres containers (via the `docker` CLI) — or connects to provided servers
# via `TEST_MARIADB_URL`/`TEST_POSTGRES_URL` — to run the *verbatim* codegen-lowered
# SQL against real servers. No reachable server ⇒ the harness skips cleanly, so
# `cargo test --all-features` stays green with no daemon.
docker-tests = ["mariadb", "serve", "postgres", "sqlite"]

[dependencies]
based-ast.workspace = true
based-diagnostics.workspace = true
based-manifest.workspace = true
based-parser.workspace = true
based-sema.workspace = true
based-codegen.workspace = true
serde_json.workspace = true
# The async trait surface: `Db`/`Tx`/`Backend` are dyn-compatible via boxed futures,
# and `fetch` returns a boxed row stream.
async-trait = "0.1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# The owned shaped-row stream (`run_query_stream`) holds its checked-out connection
# across yields — a self-borrowing generator this macro writes safely.
async-stream = "0.3"
# The runtime's own async needs: the deadlock-retry backoff sleep and the engine's
# id-gen lock. The listener feature adds `net`; binaries own the actual runtime.
tokio = { version = "1", features = ["time", "sync"] }
# The executor/pool layer for all three concrete drivers (principle 7 — reuse hardened
# tx-drop/codec/pool/streaming machinery). Strictly an executor: `query` + per-value
# binds over concrete per-DB drivers — no macros, no query builder, no `Any` driver.
# TLS off, matching the previous drivers' no-system-OpenSSL choice.
sqlx = { version = "0.9.0", optional = true, default-features = false, features = [
    "runtime-tokio",
] }
# Parsing the typed text-riding bind values (timestamp/date) into native driver types
# inside the MariaDB/Postgres driver impls.
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "std",
] }
# The axum HTTP listener behind `based serve` (feature `serve`).
axum = { version = "0.8", optional = true }
# Production id generation: unpredictable, globally unique v4 uuids.
uuid = { version = "1", optional = true, features = ["v4"] }

[dev-dependencies]
based-parser.workspace = true
# Test doubles implement the async `Db`/`Tx`/`Backend` traits.
async-trait = "0.1"
# The embed example (`tests/embed.rs`) hosts a committed generated client, which
# derives serde — the same dependency any consumer of `based gen client` pulls in.
serde.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
# The streaming-client gate (`tests/streaming_client.rs`) drives the generated client
# through a real HTTP client whose response body streams — the `stream` feature exposes
# the chunked byte stream the generated `decode_ndjson` consumes. No TLS: loopback only.
reqwest = { version = "0.13", default-features = false, features = [
    "stream",
    "json",
] }
# The codec-fidelity spike (`tests/sqlx_spike.rs`) keeps `rust_decimal` enabled to pin
# the truncation that disqualified it from the runtime codec (dev-only; the runtime's
# decimal feature is `bigdecimal`).
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "rust_decimal",
    "bigdecimal",
] }

[lints]
workspace = true
