# A standalone example — deliberately OUTSIDE the workspace (see the root Cargo.toml
# `exclude`). It depends on the in-repo engine crates *by path*, so it always tracks
# the current engine, but `cargo test --workspace` never builds it.
[package]
name = "axum-helpdesk"
version = "0.0.0"
edition = "2021"
publish = false
# `cargo run` boots the service; `--bin seed` / `--bin smoke` are the setup + gate.
default-run = "axum-helpdesk"

[dependencies]
# The engine: in-process `Engine`, the `PgRouter`/`PostgresDb` driver, and the
# production uuid id generator (`serve` pulls in `UuidGen` — Postgres's native
# `uuid` id columns reject non-uuid ids).
based-runtime = { path = "../../crates/based-runtime", features = ["postgres", "serve"] }
# The engine is async; tokio's macro runtime drives `#[tokio::main]`.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# The HTTP surface: the app's own axum listener embedding the engine.
axum = "0.8"
# The app's own connection pool — the engine runs over it (`PgRouter::from_pool`),
# so the app's settings govern and both share one set of connections.
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres"] }
# Re-framing the typed export stream as NDJSON lines.
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false }
# The generated client derives serde; the embedded bridge serializes the typed input.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The generated client types money as `rust_decimal::Decimal`; the `serde-str`
# feature (de)serializes it as a JSON string, so the exact value rides the wire.
rust_decimal = { version = "1", features = ["serde-str"] }
# The streaming export returns a `RowStream` — a `futures_core::Stream` of typed rows.
futures-core = "0.3"
# Load `DATABASE_URL` from `.env` (the conventional 12-factor crate).
dotenvy = "0.15"
# The live smoke (`cargo run --bin smoke`) drives the service over real HTTP.
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
