# A standalone example — deliberately OUTSIDE the workspace (see the root Cargo.toml
# `exclude`). It depends on the in-repo engine crates *by path*, so it always tracks the
# current engine, but `cargo test --workspace` never builds it.
[package]
name = "mariadb-quickstart"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# The engine: in-process `Engine`, the `ShardRouter`/`MariaDb` driver, and the production
# uuid id generator. The `serve` feature pulls in `mariadb` (the concrete driver) *and*
# `UuidGen` — MariaDB's native `UUID` id columns reject non-uuid ids, so a real embed uses
# the same v4-uuid generator production does (never the deterministic `SeqIdGen`).
based-runtime = { path = "../../crates/based-runtime", features = ["mariadb", "serve"] }
# The generated client derives serde; the transport bridge serializes the typed input.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `build.rs` runs the compiler front end over `schema/` and emits the typed client +
# MariaDB DDL into `OUT_DIR` at build time, so the generated code can never go stale
# against the schema (no checked-in generated artifacts to forget to regenerate).
[build-dependencies]
based-runtime = { path = "../../crates/based-runtime" }
based-codegen = { path = "../../crates/based-codegen" }
