# A standalone example — deliberately OUTSIDE the workspace (see the root Cargo.toml
# `exclude`). It depends on the in-repo engine crates *by path*, so it always tracks the
# current engine, but `cargo test --workspace` never builds it.
[package]
name = "postgres-quickstart"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# The engine: in-process `Engine`, the `PgRouter`/`PostgresDb` driver, and the production
# uuid id generator. `postgres` is the concrete driver; `serve` pulls in `UuidGen` —
# Postgres's native `uuid` id columns reject non-uuid ids, so a real embed uses the same
# v4-uuid generator production does (never the deterministic `SeqIdGen`).
based-runtime = { path = "../../crates/based-runtime", features = ["postgres", "serve"] }
# The generated client derives serde; the embedded bridge serializes the typed input.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The generated client types money as `rust_decimal::Decimal`; the `serde-str` feature
# (de)serializes it as a JSON string, so the exact value rides the wire losslessly.
rust_decimal = { version = "1", features = ["serde-str"] }
# Load `DATABASE_URL` from `.env` (the conventional 12-factor crate) — no hard-coded URL.
dotenvy = "0.15"
